remove updated_at column from users table.
