# pkg/api/api.yaml
@@ -131,7 +131,6 @@ components:
         - id
         - email
         - created_at
-        - updated_at
       properties:
         id:
           type: integer
@@ -142,10 +141,6 @@ components:
           format: email
           example: user@example.com
         created_at:
-          type: string
-          format: date-time
-          example: "2024-01-15T10:30:00Z"
-        updated_at:
           type: string
           format: date-time
           example: "2024-01-15T10:30:00Z"
